--- a/deploy/crds/broker_activemqartemisscaledown_crd.yaml
+++ b/deploy/crds/broker_activemqartemisscaledown_crd.yaml
@@ -15,10 +15,12 @@ spec:
     singular: activemqartemisscaledown
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisScaledown CRD is deprecated, it is an internal only api
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Provides message migration on clustered broker scaledown
+        description: Provides internal message migration on clustered broker scaledown
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -82,7 +84,9 @@ spec:
     storage: true
     subresources:
       status: {}
-  - name: v2alpha1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisScaledown CRD is deprecated, it is an internal only api
+    name: v2alpha1
     schema:
       openAPIV3Schema:
         description: ActiveMQArtemisScaledown is the Schema for the activemqartemisscaledowns API
