--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -151,7 +151,8 @@ spec:
                   type: object
                 type: array
               addressSettings:
-                description: Specifies the address configurations
+                description: Specifies the address configurations (deprecated in favour
+                  of BrokerProperties)
                 properties:
                   addressSetting:
                     description: Specifies the address settings
