--- a/config/crd/bases/broker.amq.io_activemqartemisscaledowns.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemisscaledowns.yaml
@@ -16,10 +16,13 @@ spec:
     singular: activemqartemisscaledown
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisScaledown CRD is deprecated, it is an internal
+      only api
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Provides message migration on clustered broker scaledown
+        description: Provides internal message migration on clustered broker scaledown
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -102,7 +105,10 @@ spec:
     storage: true
     subresources:
       status: {}
-  - name: v2alpha1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisScaledown CRD is deprecated, it is an internal
+      only api
+    name: v2alpha1
     schema:
       openAPIV3Schema:
         description: ActiveMQArtemisScaledown is the Schema for the activemqartemisscaledowns
