--- a/config/crd/bases/broker.amq.io_activemqartemissecurities.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemissecurities.yaml
@@ -16,7 +16,11 @@ spec:
     singular: activemqartemissecurity
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisSecurity CRD is deprecated. Use the spec.brokerProperties
+      attribute in the ActiveMQArtemis CR and -jaas-config extraMount to configure
+      security instead
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Security configuration for the broker
@@ -474,7 +478,11 @@ spec:
     storage: false
     subresources:
       status: {}
-  - name: v1beta1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisSecurity CRD is deprecated. Use the spec.brokerProperties
+      attribute in the ActiveMQArtemis CR and -jaas-config extraMount to configure
+      security instead
+    name: v1beta1
     schema:
       openAPIV3Schema:
         description: Security configuration for the broker
