--- a/deploy/crds/broker_activemqartemisaddress_crd.yaml
+++ b/deploy/crds/broker_activemqartemisaddress_crd.yaml
@@ -15,7 +15,9 @@ spec:
     singular: activemqartemisaddress
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisAddress CRD is deprecated. Use the spec.brokerProperties attribute in the ActiveMQArtemis CR to create addresses and queues instead
+    name: v1beta1
     schema:
       openAPIV3Schema:
         description: Adding and removing addresses using custom resource definitions
@@ -153,7 +155,9 @@ spec:
     storage: true
     subresources:
       status: {}
-  - name: v2alpha1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisAddress CRD is deprecated. Use the spec.brokerProperties attribute in the ActiveMQArtemis CR to create addresses and queues instead
+    name: v2alpha1
     schema:
       openAPIV3Schema:
         description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses API
@@ -188,7 +192,9 @@ spec:
     storage: false
     subresources:
       status: {}
-  - name: v2alpha2
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisAddress CRD is deprecated. Use the spec.brokerProperties attribute in the ActiveMQArtemis CR to create addresses and queues instead
+    name: v2alpha2
     schema:
       openAPIV3Schema:
         description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses API
@@ -226,7 +232,9 @@ spec:
     storage: false
     subresources:
       status: {}
-  - name: v2alpha3
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisAddress CRD is deprecated. Use the spec.brokerProperties attribute in the ActiveMQArtemis CR to create addresses and queues instead
+    name: v2alpha3
     schema:
       openAPIV3Schema:
         description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses API
