--- a/deploy/crds/broker_activemqartemissecurity_crd.yaml
+++ b/deploy/crds/broker_activemqartemissecurity_crd.yaml
@@ -15,7 +15,9 @@ spec:
     singular: activemqartemissecurity
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisSecurity CRD is deprecated. Use the spec.brokerProperties attribute in the ActiveMQArtemis CR and -jaas-config extraMount to configure security instead
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Security configuration for the broker
@@ -450,7 +452,9 @@ spec:
     storage: false
     subresources:
       status: {}
-  - name: v1beta1
+  - deprecated: true
+    deprecationWarning: The ActiveMQArtemisSecurity CRD is deprecated. Use the spec.brokerProperties attribute in the ActiveMQArtemis CR and -jaas-config extraMount to configure security instead
+    name: v1beta1
     schema:
       openAPIV3Schema:
         description: Security configuration for the broker
