--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,9 +84,12 @@ jobs:
         if: ${{ github.event_name != 'workflow_dispatch' || !inputs.skipDOTests }}
         run: make test-mk-do-v
 
+      - name: Run scorecard tests
+        run: make scorecard | tee scorecard.log && ! grep 'Suggestions' scorecard.log
+
       - name: Run the tutorials
         if: ${{ github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && !inputs.skipTutorials }}
-        run: go run test/utils/tutorials/tester.go
+        run: minikube delete && minikube start && go run test/utils/tutorials/tester.go
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -122,9 +125,6 @@ jobs:
           podman login --username=${{ secrets.QUAY_USERNAME }} --password=${{ secrets.QUAY_PASSWORD }} quay.io
           podman manifest push $IMAGE_NAME:dev.latest docker://quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:$COMMIT_TAG
           podman manifest push $IMAGE_NAME:dev.latest docker://quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME:dev.latest
-
-      - name: Run scorecard tests
-        run: make scorecard | tee scorecard.log && ! grep 'Suggestions' scorecard.log
 
       - name: Build the bundle image
         run: podman build --file bundle.Dockerfile --label quay.expires-after=90d --label git-sha=$GITHUB_SHA --tag $IMAGE_NAME-bundle:dev.latest .
