--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -74,6 +74,7 @@ spec:
           capabilities:
             drop:
             - ALL
+          readOnlyRootFilesystem: true
           runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
