--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -154,6 +154,7 @@ spec:
           capabilities:
             drop:
             - ALL
+          readOnlyRootFilesystem: true
           runAsNonRoot: true
           seccompProfile:
             type: RuntimeDefault
