--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -49,6 +49,8 @@ jobs:
 
       - name: Checkout the repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.BOT_TOKEN }}
 
       - name: Set up the repo
         run: |
